--- a/app/views/solicituds/index.html.erb
+++ b/app/views/solicituds/index.html.erb
@@ -8,9 +8,13 @@
                 </p>
                 <ul class="menu-list">
                     <li><a href=<%= turnos_new_path %>> Crear Turno </a></li>
+                    <li><a href=<%= turnos_index_path(:razon => "Buscador de Turnos") %>> Buscador de Turnos </a></li>
                     <li><a href=<%= turnos_index_path(:razon => "Turnos Creados por mi") %>> Ver Mis Turnos </a></li>
                     <li><a href=<%= turnos_index_path(:razon => "Turnos en los que estoy") %>> Turnos de los que Participo </a></li>
-
+                    <li>
+                    <figure class="image is-128x128">
+                        <a href=<%= turnos_redirect_path %>> <%= image_tag("calendar_logo.jpg", class: "is-rounded") %></a>
+                    </li>
                 </ul>
                 <p class="menu-label">
                     Solicitudes
