Google Calendar en Menu

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -12,6 +12,10 @@
                 <li><a href=<%= turnos_index_path(:razon => "Buscador de Turnos") %>> Buscador de Turnos </a></li>
                 <li><a href=<%= turnos_index_path(:razon => "Mis Turnos") %>> Ver Mis Turnos </a></li>
                 <li><a href=<%= turnos_index_path(:razon => "Turnos de los que Participo") %>> Turnos de los que Participo </a></li>
+                <li>
+                    <figure class="image is-64x64">
+                        <a href=<%= turnos_redirect_path %>> <%= image_tag("calendar_logo.jpg", class: "is-rounded") %></a>
+                </li>
 
             </ul>
             <p class="menu-label is-size-6 is-underlined">
