--- a/app/assets/stylesheets/turnos.scss
+++ b/app/assets/stylesheets/turnos.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Turnos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+  .msg-content {
+    width: 60%;
+    height: 30px;
+    margin-right: 5px;
+  }
+
+  .col-md-10 {
+    height: 100vh;
+    overflow: scroll;
+  }
+  .message-box {
+    width: fit-content;
+    max-width: 40%;
+    padding: 5px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    background-color: #555555 ;
+    padding: 10px
+  }
