--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -66,6 +66,11 @@
           <td><%= resena.usuario.nombre %></td>
           <td><%= resena.calificacion %></td>
           <td><%= resena.contenido %></td>
+          <% if current_usuario.has_role? :admin %>
+          <td>
+            <%= link_to "Eliminar", resenas_delete_path(:resena_id => resena.id), method: :delete, data: {confirm: "Desea eliminar esta reseña?"} %>
+          </td>
+          <% end %>
         </tr>
         <% end %>
       </tbody>
@@ -95,9 +100,17 @@
       <% elsif @mostrar_solicitar_unirse %>
           <h3 class="title has-background-info-light is-5">Solicitar</h3>
           <p><%= link_to 'Solicitar unirse al turno', solicituds_new_path(:id_turno => @turno.id), class: "button is-outlined is-success is-link is-small" %></p>
+          <% if current_usuario.has_role? :admin %>
+            <br>
+            <%= link_to "Eliminar Turno", turnos_delete_path(:id => @turno.id), method: :delete, class: "button is-outlined is-danger is-small" %></p>
+          <% end %>
       <% elsif @mostrar_salirse_del_turno %>
           <h3 class="title has-background-info-light is-5">Salirse</h3>
           <p><%= link_to 'Salirse del Turno', pertenece_as_delete_path(:id_pertenece_a => @id_pertenece_a), method: :delete, class: "button is-outlined is-danger is-small"%></p>
+          <% if current_usuario.has_role? :admin %>
+            <br>
+            <%= link_to "Eliminar Turno", turnos_delete_path(:id => @turno.id), method: :delete, class: "button is-outlined is-danger is-small" %></p>
+          <% end %>
       <% end %>
 
     </div>
