Empezando ultimos test

--- a/app/assets/stylesheets/turnos.scss
+++ b/app/assets/stylesheets/turnos.scss
@@ -17,6 +17,6 @@
     padding: 5px;
     border-radius: 10px;
     margin-bottom: 10px;
-    background-color: #555555 ;
+    background-color: rgba(175, 142, 152, 0.733) ;
     padding: 10px
   }
