--- a/app/views/turnos/show.html.erb
+++ b/app/views/turnos/show.html.erb
@@ -8,7 +8,7 @@
         <p class="is-size-6 has-text-weight-bold"> Direccion de llegada: <%= @turno.direccion_llegada%></p>
       </div>
       <div>
-        <p class="mt-4 is-size-6 has-text-weight-bold "> Direccion de salida: <%= @turno.direccion_llegada%></p>
+        <p class="mt-4 is-size-6 has-text-weight-bold "> Direccion de salida: <%= @turno.direccion_salida%></p>
       </div>
 
       <div>
