--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -17,7 +17,7 @@
                 <div class="column is-half is-offset-one-fifth">
                     <div class="field">
                         <p class="control has-icons-left">
-                            <%= text_field_tag :busqueda_por_direccion, params[:busqueda_por_direccion], :class => "input", :placeholder => "Busqueda por direccion"%>
+                            <%= text_field_tag :busqueda_por_direccion, params[:busqueda_por_direccion], :class => "input", :placeholder => "Busqueda por dirección"%>
                             <span class="icon is-small is-left">
                                 <i class="fas fa-search"></i>
                             </span>
