--- a/app/views/usuarios/registrations/new.html.erb
+++ b/app/views/usuarios/registrations/new.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { data: { turbo: false} }) do |f| %>
   <%= render "usuarios/shared/error_messages", resource: resource %>
   <div class="columns is-centered mt-4">
     <div class="column is-4 has-background-info-light">
