--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="column is-one-fifth has-background-info-light mt-3 ml-3">
-    <div class="container content">
+    <div class="container">
         <aside class="menu has-text-left margin mt-3 ml-2">
             
             <p class="menu-label is-size-6 is-underlined">
