--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -13,7 +13,7 @@
                 <div class="columns is-centered">
                     <div  class="mt-5 column is-half is-inline-block">
                         <figure class="image">
-                            <%= image_tag("landing2.png") %>
+                            <%= image_tag("landing.png") %>
                         </figure>
                     </div>
                 </div>
